--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -18,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node-cron": "^3.0.11",
+    "@types/pug": "^2.0.10",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -27,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "node-cron": "^3.0.3",
+    "pug": "^3.0.3",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "winston": "^3.16.0"
