--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
     "@types/pug": "^2.0.10",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
@@ -29,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "pug": "^3.0.3",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
