--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,35 @@
-node_modules
+# Enviroment variables
 .env
-
-# Ignore Compiled Files
-/backend/**/*.html
 
 # Ignore Logs files
 logs
 /**/*.log
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Built files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Ignore Compiled Files
+/backend/**/*.html
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
